--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "grunt": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-less": "*",
-    "grunt-contrib-watch": "~0.3.1"
+    "grunt-contrib-watch": "~0.3.1",
+    "gulp-coffee": "^2.3.1",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-server-livereload": "^1.2.1",
+    "gulp-uglify": "^1.1.0"
   }
 }
